Queue操作クラスを追加

--- a/TYS.AzureLibrary.csproj
+++ b/TYS.AzureLibrary.csproj
@@ -51,6 +51,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Library\OperateBlobStorage.cs" />
+    <Compile Include="Library\OperateQueueStorage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
